--- a/docs/turma/ago2020.mdx
+++ b/docs/turma/ago2020.mdx
@@ -6,302 +6,369 @@ const data = {
     "Terça-Feira",
     "Quarta-Feira",
     "Quinta-Feira",
-    "Sexta-Feira"
+    "Sexta-Feira",
   ],
   time: [
     {
       time: "07:30 - 08:20",
-      size: 50
+      size: 50,
     },
     {
       time: "08:20 - 09:10",
-      size: 50
+      size: 50,
     },
     {
       time: "09:10 - 09:25",
-      size: 15
+      size: 15,
     },
     {
       time: "09:25 - 10:15",
-      size: 50
+      size: 50,
     },
     {
       time: "10:15 - 11:05",
-      size: 50
+      size: 50,
     },
     {
       time: "11:05 - 11:55",
-      size: 50
+      size: 50,
     },
     {
       time: "11:55 - 13:10",
-      size: 75
+      size: 75,
     },
     {
       time: "13:10 - 14:00",
-      size: 50
+      size: 50,
     },
     {
       time: "14:00 - 14:50",
-      size: 50
+      size: 50,
     },
     {
       time: "14:50 - 15:05",
-      size: 15
+      size: 15,
     },
     {
       time: "15:05 - 15:55",
-      size: 50
+      size: 50,
     },
     {
       time: "15:55 - 16:45",
-      size: 50
+      size: 50,
     },
     {
       time: "16:45 - 19:00",
-      size: 135
+      size: 135,
     },
     {
       time: "19:00 - 19:50",
-      size: 50
+      size: 50,
     },
     {
       time: "19:50 - 20:40",
-      size: 50
+      size: 50,
     },
     {
       time: "20:40 - 21:00",
-      size: 20
+      size: 20,
     },
     {
       time: "21:00 - 21:50",
-      size: 50
+      size: 50,
     },
     {
       time: "21:50 - 22:40",
-      size: 50
-    }
+      size: 50,
+    },
   ],
   listTimetable: [
     {
-      subject: "Matemática III - 1086",
+      subject: "Matemática III",
+      nickname: "Matemática III",
       size: 2,
       teacher: "Carla Melli Tambarussi",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 11,
-      y: 5
+      y: 5,
     },
     {
-      subject: "Gestão e Empreendedorismo Rural - 1095",
+      subject: "Gestão e Empreendedorismo Rural",
+      nickname: "GER",
       size: 2,
       teacher: "Cesar Gomes de Freitas",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 5,
-      y: 5
+      y: 5,
     },
     {
-      subject: "Biologia III - 1083",
+      subject: "Biologia III",
+      nickname: "Bio III",
       size: 2,
       teacher: "Eliana Peliçon Pereira Figueira",
       classroom: "Laboratório de Biologia",
       students: "AGO2020",
       x: 5,
-      y: 2
+      y: 2,
     },
     {
-      subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
+      subject:
+        "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA)",
+      nickname: "APOVA",
       size: 2,
       teacher: "Elias Franco",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 1,
-      y: 5
+      y: 5,
     },
     {
-      subject: "Sociologia e extensão rural - 1087",
+      subject: "Sociologia e extensão rural",
+      nickname: "Sociologia e E. R.",
       size: 1,
       teacher: "Elias Franco",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 4,
-      y: 5
+      y: 5,
     },
     {
-      subject: "Sociologia e extensão rural - 1087",
+      subject: "Sociologia e extensão rural",
+      nickname: "Sociologia e E. R.",
       size: 1,
       teacher: "Elias Franco",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 2,
-      y: 3
+      y: 3,
     },
     {
-      subject: "Filosofia III - 1088",
+      subject: "Filosofia III ",
+      nickname: "Filosofia III ",
       size: 1,
       teacher: "Fabio Antônio da Silva",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 1,
-      y: 3
+      y: 3,
     },
     {
-      subject: "Filosofia III - 1088",
+      subject: "Filosofia III ",
+      nickname: "Filosofia III ",
       size: 1,
       teacher: "Fabio Antônio da Silva",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 11,
-      y: 2
+      y: 2,
     },
     {
-      subject: "Cultura e Cinema Nacional III - 1193",
+      subject: "Cultura e Cinema Nacional III",
+      nickname: "CCN III",
       size: 1,
       teacher: "Josiane Paula Maltauro",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 6,
-      y: 3
+      y: 3,
     },
     {
-      subject: "Química III - 1085",
+      subject: "Química III",
+      nickname: "Química III",
       size: 2,
       teacher: "Kathia Regina Kunzler Bechlin",
       classroom: "Laboratório de Química",
       students: "AGO2020",
       x: 8,
-      y: 5
+      y: 5,
     },
     {
-      subject: "Produção Animal II - 1093",
+      subject: "Produção Animal II",
+      nickname: "Prod. Animal II",
       size: 2,
       teacher: "Leiliane Cristine de Souza+Roberto Haruyoshi Ito",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 11,
-      y: 4
+      y: 4,
     },
     {
-      subject: "Produção Animal II - 1093",
+      subject: "Produção Animal II",
+      nickname: "Prod. Animal II",
       size: 1,
       teacher: "Leiliane Cristine de Souza+Roberto Haruyoshi Ito",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 12,
-      y: 2
+      y: 2,
     },
     {
-      subject: "Sanidade Animal - 1092",
+      subject: "Sanidade Animal",
+      nickname: "Sanidade Animal",
       size: 2,
       teacher: "Leiliane Cristine de Souza+Roberto Haruyoshi Ito",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 8,
-      y: 4
+      y: 4,
     },
     {
-      subject: "História II - 1089",
+      subject: "História II",
+      nickname: "História II",
       size: 2,
       teacher: "Milton Aparecido Azevedo",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 1,
-      y: 1
+      y: 1,
     },
     {
-      subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
+      subject: "Mecanização Agrícola, Irrigação e Drenagem",
+      nickname: "MAID",
       size: 2,
       teacher: "Octavio Henrique Viana",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 1,
-      y: 4
+      y: 4,
     },
     {
-      subject: "Orientação de estágio supervisionado - 1097",
+      subject: "Orientação de estágio supervisionado",
+      nickname: "OES",
       size: 1,
       teacher: "Octavio Henrique Viana",
       classroom: "Laboratório de Informatica C",
       students: "AGO2020",
       x: 4,
-      y: 1
+      y: 1,
     },
     {
-      subject: "Língua Portuguesa e Literatura III - 1081",
+      subject: "Língua Portuguesa e Literatura III",
+      nickname: "LPL III",
       size: 2,
       teacher: "Pedro Leites Junior",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 1,
-      y: 2
+      y: 2,
     },
     {
-      subject: "Língua Portuguesa e Literatura III - 1081",
+      subject: "Língua Portuguesa e Literatura III",
+      nickname: "LPL III",
       size: 1,
       teacher: "Pedro Leites Junior",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 4,
-      y: 2
+      y: 2,
     },
     {
-      subject: "Física III - 1084",
+      subject: "Física III",
+      nickname: "Física III",
       size: 2,
       teacher: "Polyanna Guimarães e Miranda",
       classroom: "Laboratório de Física",
       students: "AGO2020",
       x: 8,
-      y: 2
+      y: 2,
     },
     {
-      subject: "Culturas II - 1091",
+      subject: "Culturas II",
+      nickname: "Culturas II",
       size: 2,
       teacher: "Sônia Maria Mandotti",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 4,
-      y: 4
+      y: 4,
     },
     {
-      subject: "Culturas II - 1091",
+      subject: "Culturas II",
+      nickname: "Culturas II",
       size: 1,
       teacher: "Sônia Maria Mandotti",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 6,
-      y: 4
+      y: 4,
     },
     {
-      subject: "Horticultura - 1090",
+      subject: "Horticultura",
+      nickname: "Horticultura",
       size: 2,
       teacher: "Tatiane Martinazzo Portz",
       classroom: "Sala 16-2",
       students: "AGO2020",
       x: 5,
-      y: 1
+      y: 1,
     },
     {
-      subject: "Educação Física III - 1082",
+      subject: "Educação Física III",
+      nickname: "EF III",
       size: 2,
       teacher: "Tiago Amaral Silva",
       classroom: "Educação Física / Sala 4 B2",
       students: "AGO2020",
       x: 4,
-      y: 3
-    }
-  ]
-}
+      y: 3,
+    },
+  ],
+  subtitle: [
+    {
+      nickname: "GER",
+      subject: "Gestão e Empreendedorismo Rural",
+    },
+    {
+      nickname: "Bio III",
+      subject: "Biologia III",
+    },
+    {
+      nickname: "APOVA",
+      subject:
+        "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA)",
+    },
+    {
+      nickname: "Sociologia e E. R.",
+      subject: "Sociologia e extensão rural",
+    },
+    {
+      nickname: "CCN",
+      subject: "Cultura e Cinema Nacional III",
+    },
+    {
+      nickname: "Prod. Animal II",
+      subject: "Produção Animal II",
+    },
+    {
+      nickname: "MAID",
+      subject: "Mecanização Agrícola, Irrigação e Drenagem",
+    },
+    {
+      nickname: "OES",
+      subject: "Orientação de estágio supervisionado",
+    },
+    {
+      nickname: "LPL III",
+      subject: "Língua Portuguesa e Literatura III",
+    },
+    {
+      nickname: "EF III",
+      subject: "Educação Física III - 1082",
+    },
+  ],
+};
 
 # AGO2020
 
 <div>
-    {
-        <Grid
-            title={data.title}
-            weekDays={data.week}
-            time={data.time}
-            listClasses={data.listTimetable}
-        />
-    }
+  {
+    <Grid
+      title={data.title}
+      weekDays={data.week}
+      time={data.time}
+      listClasses={data.listTimetable}
+    />
+  }
 </div>
