fix: responsive timetable

--- a/docs/turma/ago2020.mdx
+++ b/docs/turma/ago2020.mdx
@@ -1,4 +1,4 @@
-import Grid from "../../src/components/Grid";
+import { Grid } from "../../src/components/Grid";
 const data = {
   title: "AGO2020",
   week: [
