--- a/docs/turma/iiw2022a.mdx
+++ b/docs/turma/iiw2022a.mdx
@@ -1,12 +1,184 @@
-import Grid from "../../src/components/Grid";
+import { Grid } from "../../src/components/Grid";
 const data = {
   title: "IIW2022A",
-  week: [
-    "Segunda-Feira",
-    "Terça-Feira",
-    "Quarta-Feira",
-    "Quinta-Feira",
-    "Sexta-Feira"
+  weekClasses: [
+    {
+      title: "Segunda-Feira",
+      timetable: [
+        {
+          subject: "Fundamentos de informática - 1076",
+          size: 2,
+          teacher: "Douglas Barbosa Sousa",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2022A",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Filosofia I - 1139",
+          size: 1,
+          teacher: "Fabio Antônio da Silva",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Matemática I - 1064",
+          size: 2,
+          teacher: "Sérgio Augusto Dias Castro",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Lógica de programação - 1075",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Projeto integrador I - 1078",
+          size: 2,
+          teacher: "Alexandre Rodrigues Monge",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2022A",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Filosofia I - 1139",
+          size: 1,
+          teacher: "Fabio Antônio da Silva",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Biologia I - 1073",
+          size: 2,
+          teacher: "Paula Magalhães Souza Deccache",
+          classroom: "Laboratório de Biologia",
+          students: "IIW2022A",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
+          size: 2,
+          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2022A",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Sociologia I - 1071",
+          size: 1,
+          teacher: "Everaldo Lorensetti",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Física I - 1070",
+          size: 2,
+          teacher: "Polyanna Guimarães e Miranda",
+          classroom: "Laboratório de Física",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
+          size: 2,
+          teacher: "Rafael Gil Ferques+Novo(a) professor(a) Informática",
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2022A",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "História I - 1224",
+          size: 1,
+          teacher: "Amilcar Machado Profeta Filho",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Educação Física I - 1072",
+          size: 2,
+          teacher: "Karina Alves da Silva",
+          classroom: "Educação Física / Sala 4 B2",
+          students: "IIW2022A",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Lingua estrangeira - Inglês - 1225",
+          size: 2,
+          teacher: "Keyla Christina Almeida Portela",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I - 1069",
+          size: 2,
+          teacher: "Michelli Cristina Galli",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática I - 1064",
+          size: 2,
+          teacher: "Sérgio Augusto Dias Castro",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
+        {
+          subject: "Química I - 1068",
+          size: 2,
+          teacher: "Elizangela Cavazzini Cesca",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Sociologia I - 1071",
+          size: 1,
+          teacher: "Everaldo Lorensetti",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I - 1069",
+          size: 2,
+          teacher: "Michelli Cristina Galli",
+          classroom: "Sala 11-2",
+          students: "IIW2022A",
+          time: "07:30 - 08:20"
+        }
+      ]
+    }
   ],
   time: [
     {
@@ -81,179 +253,6 @@ const data = {
       time: "21:50 - 22:40",
       size: 50
     }
-  ],
-  listTimetable: [
-    {
-      subject: "Lógica de programação - 1075",
-      size: 2,
-      teacher: "Alexandre Rodrigues Monge",
-      classroom: "Laboratório de Informatica A",
-      students: "IIW2022A",
-      x: 5,
-      y: 2
-    },
-    {
-      subject: "Projeto integrador I - 1078",
-      size: 2,
-      teacher: "Alexandre Rodrigues Monge",
-      classroom: "Laboratório de Informatica A",
-      students: "IIW2022A",
-      x: 11,
-      y: 2
-    },
-    {
-      subject: "História I - 1224",
-      size: 1,
-      teacher: "Amilcar Machado Profeta Filho",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 6,
-      y: 4
-    },
-    {
-      subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-      size: 2,
-      teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-      classroom: "Laboratório de Informatica A",
-      students: "IIW2022A",
-      x: 1,
-      y: 1
-    },
-    {
-      subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-      size: 2,
-      teacher: "Caroline Domingues Porto do Nascimento Barbieri",
-      classroom: "Laboratório de Informatica A",
-      students: "IIW2022A",
-      x: 1,
-      y: 4
-    },
-    {
-      subject: "Fundamentos de informática - 1076",
-      size: 2,
-      teacher: "Douglas Barbosa Sousa",
-      classroom: "Laboratório de Informatica A",
-      students: "IIW2022A",
-      x: 5,
-      y: 5
-    },
-    {
-      subject: "Química I - 1068",
-      size: 2,
-      teacher: "Elizangela Cavazzini Cesca",
-      classroom: "Laboratório de Química",
-      students: "IIW2022A",
-      x: 8,
-      y: 4
-    },
-    {
-      subject: "Sociologia I - 1071",
-      size: 1,
-      teacher: "Everaldo Lorensetti",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 6,
-      y: 3
-    },
-    {
-      subject: "Sociologia I - 1071",
-      size: 1,
-      teacher: "Everaldo Lorensetti",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 4,
-      y: 5
-    },
-    {
-      subject: "Filosofia I - 1139",
-      size: 1,
-      teacher: "Fabio Antônio da Silva",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 4,
-      y: 2
-    },
-    {
-      subject: "Filosofia I - 1139",
-      size: 1,
-      teacher: "Fabio Antônio da Silva",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 4,
-      y: 1
-    },
-    {
-      subject: "Educação Física I - 1072",
-      size: 2,
-      teacher: "Karina Alves da Silva",
-      classroom: "Educação Física / Sala 4 B2",
-      students: "IIW2022A",
-      x: 1,
-      y: 2
-    },
-    {
-      subject: "Lingua estrangeira - Inglês - 1225",
-      size: 2,
-      teacher: "Keyla Christina Almeida Portela",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 11,
-      y: 4
-    },
-    {
-      subject: "Língua Portuguesa e Literatura I - 1069",
-      size: 2,
-      teacher: "Michelli Cristina Galli",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 1,
-      y: 5
-    },
-    {
-      subject: "Língua Portuguesa e Literatura I - 1069",
-      size: 2,
-      teacher: "Michelli Cristina Galli",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 4,
-      y: 4
-    },
-    {
-      subject: "Biologia I - 1073",
-      size: 2,
-      teacher: "Paula Magalhães Souza Deccache",
-      classroom: "Laboratório de Biologia",
-      students: "IIW2022A",
-      x: 8,
-      y: 2
-    },
-    {
-      subject: "Física I - 1070",
-      size: 2,
-      teacher: "Polyanna Guimarães e Miranda",
-      classroom: "Laboratório de Física",
-      students: "IIW2022A",
-      x: 1,
-      y: 3
-    },
-    {
-      subject: "Matemática I - 1064",
-      size: 2,
-      teacher: "Sérgio Augusto Dias Castro",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 5,
-      y: 1
-    },
-    {
-      subject: "Matemática I - 1064",
-      size: 2,
-      teacher: "Sérgio Augusto Dias Castro",
-      classroom: "Sala 11-2",
-      students: "IIW2022A",
-      x: 4,
-      y: 3
-    }
   ]
 }
 
@@ -262,10 +261,9 @@ const data = {
 <div>
     {
         <Grid
-            title={data.title}
-            weekDays={data.week}
+            title={data.title} 
+            weekClasses={data.weekClasses} 
             time={data.time}
-            listClasses={data.listTimetable}
         />
     }
 </div>
