--- a/docs/turma/elm2022.mdx
+++ b/docs/turma/elm2022.mdx
@@ -1,12 +1,96 @@
-import Grid from "../../src/components/Grid";
+import { Grid } from "../../src/components/Grid";
 const data = {
   title: "ELM2022",
-  week: [
-    "Segunda-Feira",
-    "Terça-Feira",
-    "Quarta-Feira",
-    "Quinta-Feira",
-    "Sexta-Feira"
+  weekClasses: [
+    {
+      title: "Segunda-Feira",
+      timetable: [
+        {
+          subject: "Eletrônica Analógica - 339",
+          size: 2,
+          teacher: "Wylliam Salviano Gongora",
+          classroom: "Laboratório de Física",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Análise de Circuitos - 341",
+          size: 2,
+          teacher: "Alex Miyamoto Mussi",
+          classroom: "Laboratório de Física",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Análise de Circuitos - 341",
+          size: 2,
+          teacher: "Alex Miyamoto Mussi",
+          classroom: "Laboratório de Física",
+          students: "ELM2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "Processos de Fabricação II - 344",
+          size: 2,
+          teacher: "Luiz Inácio Chaves",
+          classroom: "Laboratório de Usinagem B4",
+          students: "ELM2022",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Tecnologia dos Materiais - 343",
+          size: 2,
+          teacher: "Sérgio Takahashi",
+          classroom: "Sala 7-2",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "Desenho Assistido por computador - 340",
+          size: 2,
+          teacher: "Sérgio Takahashi",
+          classroom: "Laboratório de Informatica C",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Tecnologia dos Materiais - 343",
+          size: 2,
+          teacher: "Sérgio Takahashi",
+          classroom: "Sala 7-2",
+          students: "ELM2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
+        {
+          subject: "Eletrônica Analógica - 339",
+          size: 2,
+          teacher: "Wylliam Salviano Gongora",
+          classroom: "Laboratório de Física",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
+        }
+      ]
+    }
   ],
   time: [
     {
@@ -81,80 +165,6 @@ const data = {
       time: "21:50 - 22:40",
       size: 50
     }
-  ],
-  listTimetable: [
-    {
-      subject: "Análise de Circuitos - 341",
-      size: 2,
-      teacher: "Alex Miyamoto Mussi",
-      classroom: "Laboratório de Física",
-      students: "ELM2022",
-      x: 17,
-      y: 1
-    },
-    {
-      subject: "Análise de Circuitos - 341",
-      size: 2,
-      teacher: "Alex Miyamoto Mussi",
-      classroom: "Laboratório de Física",
-      students: "ELM2022",
-      x: 14,
-      y: 1
-    },
-    {
-      subject: "Processos de Fabricação II - 344",
-      size: 2,
-      teacher: "Luiz Inácio Chaves",
-      classroom: "Laboratório de Usinagem B4",
-      students: "ELM2022",
-      x: 14,
-      y: 2
-    },
-    {
-      subject: "Desenho Assistido por computador - 340",
-      size: 2,
-      teacher: "Sérgio Takahashi",
-      classroom: "Sala 7-2",
-      students: "ELM2022",
-      x: 17,
-      y: 4
-    },
-    {
-      subject: "Tecnologia dos Materiais - 343",
-      size: 2,
-      teacher: "Sérgio Takahashi",
-      classroom: "Sala 7-2",
-      students: "ELM2022",
-      x: 14,
-      y: 4
-    },
-    {
-      subject: "Tecnologia dos Materiais - 343",
-      size: 2,
-      teacher: "Sérgio Takahashi",
-      classroom: "Sala 7-2",
-      students: "ELM2022",
-      x: 14,
-      y: 3
-    },
-    {
-      subject: "Eletrônica Analógica - 339",
-      size: 2,
-      teacher: "Wylliam Salviano Gongora",
-      classroom: "Laboratório de Física",
-      students: "ELM2022",
-      x: 14,
-      y: 5
-    },
-    {
-      subject: "Eletrônica Analógica - 339",
-      size: 2,
-      teacher: "Wylliam Salviano Gongora",
-      classroom: "Laboratório de Física",
-      students: "ELM2022",
-      x: 17,
-      y: 2
-    }
   ]
 }
 
@@ -163,10 +173,9 @@ const data = {
 <div>
     {
         <Grid
-            title={data.title}
-            weekDays={data.week}
+            title={data.title} 
+            weekClasses={data.weekClasses} 
             time={data.time}
-            listClasses={data.listTimetable}
         />
     }
 </div>
