--- a/docs/turma/iiw2022b.mdx
+++ b/docs/turma/iiw2022b.mdx
@@ -1,12 +1,168 @@
-import Grid from "../../src/components/Grid";
+import { Grid } from "../../src/components/Grid";
 const data = {
   title: "IIW2022B",
-  week: [
-    "Segunda-Feira",
-    "Terça-Feira",
-    "Quarta-Feira",
-    "Quinta-Feira",
-    "Sexta-Feira"
+  weekClasses: [
+    {
+      title: "Segunda-Feira",
+      timetable: [
+        {
+          subject: "Sociologia I - 1071",
+          size: 2,
+          teacher: "Neomar Sandro Mignoni",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Física I - 1070",
+          size: 2,
+          teacher: "Polyanna Guimarães e Miranda",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Terça-Feira",
+      timetable: [
+        {
+          subject: "Lingua estrangeira - Inglês - 1225",
+          size: 2,
+          teacher: "Celina de Oliveira Barbosa Gomes",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I - 1069",
+          size: 2,
+          teacher: "Celina de Oliveira Barbosa Gomes",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
+          size: 2,
+          teacher: "Eduardo Alberto Felippsen",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Lógica de programação - 1075",
+          size: 2,
+          teacher: "Rafael Luis Bartz",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Quarta-Feira",
+      timetable: [
+        {
+          subject: "História I - 1224",
+          size: 1,
+          teacher: "Amilcar Machado Profeta Filho",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Matemática I - 1064",
+          size: 2,
+          teacher: "Carla Melli Tambarussi",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Projeto integrador I - 1078",
+          size: 2,
+          teacher: "Olavo José Luiz Junior",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      title: "Quinta-Feira",
+      timetable: [
+        {
+          subject: "Matemática I - 1064",
+          size: 2,
+          teacher: "Carla Melli Tambarussi",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I - 1069",
+          size: 2,
+          teacher: "Celina de Oliveira Barbosa Gomes",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
+          size: 2,
+          teacher: "Eduardo Alberto Felippsen",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Fundamentos de informática - 1076",
+          size: 2,
+          teacher: "Humberto Fioravante Ferro",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      title: "Sexta-Feira",
+      timetable: [
+        {
+          subject: "Química I - 1068",
+          size: 2,
+          teacher: "Ana Paula Sone",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Educação Física I - 1072",
+          size: 2,
+          teacher: "Karina Alves da Silva",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Biologia I - 1073",
+          size: 2,
+          teacher: "Michele Fernanda Bortolini",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Filosofia I - 1139",
+          size: 2,
+          teacher: "Neomar Sandro Mignoni",
+          classroom: "BioPark-01",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        }
+      ]
+    }
   ],
   time: [
     {
@@ -81,161 +237,6 @@ const data = {
       time: "21:50 - 22:40",
       size: 50
     }
-  ],
-  listTimetable: [
-    {
-      subject: "História I - 1224",
-      size: 1,
-      teacher: "Amilcar Machado Profeta Filho",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 4,
-      y: 3
-    },
-    {
-      subject: "Química I - 1068",
-      size: 2,
-      teacher: "Ana Paula Sone",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 8,
-      y: 5
-    },
-    {
-      subject: "Matemática I - 1064",
-      size: 2,
-      teacher: "Carla Melli Tambarussi",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 11,
-      y: 4
-    },
-    {
-      subject: "Matemática I - 1064",
-      size: 2,
-      teacher: "Carla Melli Tambarussi",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 1,
-      y: 3
-    },
-    {
-      subject: "Lingua estrangeira - Inglês - 1225",
-      size: 2,
-      teacher: "Celina de Oliveira Barbosa Gomes",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 8,
-      y: 2
-    },
-    {
-      subject: "Língua Portuguesa e Literatura I - 1069",
-      size: 2,
-      teacher: "Celina de Oliveira Barbosa Gomes",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 11,
-      y: 2
-    },
-    {
-      subject: "Língua Portuguesa e Literatura I - 1069",
-      size: 2,
-      teacher: "Celina de Oliveira Barbosa Gomes",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 8,
-      y: 4
-    },
-    {
-      subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-      size: 2,
-      teacher: "Eduardo Alberto Felippsen",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 1,
-      y: 2
-    },
-    {
-      subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
-      size: 2,
-      teacher: "Eduardo Alberto Felippsen",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 5,
-      y: 4
-    },
-    {
-      subject: "Fundamentos de informática - 1076",
-      size: 2,
-      teacher: "Humberto Fioravante Ferro",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 1,
-      y: 4
-    },
-    {
-      subject: "Educação Física I - 1072",
-      size: 2,
-      teacher: "Karina Alves da Silva",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 5,
-      y: 5
-    },
-    {
-      subject: "Biologia I - 1073",
-      size: 2,
-      teacher: "Michele Fernanda Bortolini",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 11,
-      y: 5
-    },
-    {
-      subject: "Filosofia I - 1139",
-      size: 2,
-      teacher: "Neomar Sandro Mignoni",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 1,
-      y: 5
-    },
-    {
-      subject: "Sociologia I - 1071",
-      size: 2,
-      teacher: "Neomar Sandro Mignoni",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 1,
-      y: 1
-    },
-    {
-      subject: "Projeto integrador I - 1078",
-      size: 2,
-      teacher: "Olavo José Luiz Junior",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 5,
-      y: 3
-    },
-    {
-      subject: "Física I - 1070",
-      size: 2,
-      teacher: "Polyanna Guimarães e Miranda",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 5,
-      y: 1
-    },
-    {
-      subject: "Lógica de programação - 1075",
-      size: 2,
-      teacher: "Rafael Luis Bartz",
-      classroom: "BioPark-01",
-      students: "IIW2022B",
-      x: 5,
-      y: 2
-    }
   ]
 }
 
@@ -244,10 +245,9 @@ const data = {
 <div>
     {
         <Grid
-            title={data.title}
-            weekDays={data.week}
+            title={data.title} 
+            weekClasses={data.weekClasses} 
             time={data.time}
-            listClasses={data.listTimetable}
         />
     }
 </div>
